--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "require": {
         "php": "^7.3|^8.0",
         "cerbero/laravel-enum": "^1.3",
-        "doctrine/dbal": "^3.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.54",
         "laravel/passport": "^10.1",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "pbmedia/laravel-ffmpeg": "^7.5",
+        "php-ffmpeg/php-ffmpeg": "^0.18.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
