--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "pbmedia/laravel-ffmpeg": "^7.5",
-        "php-ffmpeg/php-ffmpeg": "^0.18.0"
+        "php-ffmpeg/php-ffmpeg": "^0.18.0",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
